--- a/timeline_app/static/css/forms.css
+++ b/timeline_app/static/css/forms.css
@@ -9,18 +9,17 @@
     box-shadow: 0.75rem 0.75rem 0 -0.2rem var(--accent-colour);
 }
 
-
 .form__container {
     padding: 2.5rem 1.5rem 1.5rem 1.5rem;
 }
 
-@media screen and (min-width: 24.75em) {
+@media screen and (min-width: 24.75rem) {
     .form__container {
         padding-left: 2rem;
     }
 }
 
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 30rem) {
     .form__container {
         padding-left: 2.5rem;
     }
@@ -39,14 +38,11 @@
 .form__field {
     outline: none;
     border: none;
-
     border-bottom: 4px solid #ffffff;
-
     font-size: inherit;
     font-family: inherit;
-
     padding: 0.75rem 0.5rem;
-    background: var(--background-color);
+    background:  var(--background-color);
 }
 
 .form__field:focus {
@@ -58,46 +54,4 @@
     padding: 0.75rem 3rem;
     border: none;
     background: var(--background-color);
-}
-
-.button--form:hover {
-    background: var(--background-color-hover);
-}
-
-.form__small {
-  font-size: 0.83rem;
-  color: var(--text-muted);
-}
-
-.form__link {
-  text-decoration: none;
-  color: var(--accent-colour);
-}
-
-.form__link:hover {
-  color: #d05656;
-}
-
-.form__error {
-  margin-top: 0.5rem;
-}
-
-.form__error,
-.form__flash {
-  display: block;
-  padding: 0.5rem;
-  color: var(--text);
-}
-
-.form__error,
-.form__flash--danger {
-  background: var(--accent-colour);
-}
-
-.form__flash {
-  margin: 0.5rem;
-}
-
-.form__flash--success {
-  background: var(--accent-colour-2);
 }
