--- a/timeline_app/templates/layout.html
+++ b/timeline_app/templates/layout.html
@@ -1,5 +1,5 @@
+{% from "macros/footer.html" import footer  %}
 {% from "macros/nav.html" import header %}
-{% from "macros/footer.html" import footer %}
 
 <!DOCTYPE html>
 <html lang="en" class="{{ 'dark-mode' if session.get('theme') == 'dark' }}">
@@ -7,7 +7,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>{{ title | default('Movie Watchlist') }}</title>
+    <title>History of Poland</title>
     <link href="https://fonts.googleapis.com/css?family=Public+Sans:400,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"/>
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-{{ header(session.get("email"), session.get("theme")) }}
+{{ header(None, "") }}
 <main class="main">
     {% block main_content %} {% endblock %}
 </main>
