--- a/timeline_app/templates/macros/nav.html
+++ b/timeline_app/templates/macros/nav.html
@@ -1,45 +1,52 @@
 {% from 'macros/svgs.html' import moon, sun %}
 
+
+
 {% macro header(email, theme) %}
     <header class="header">
         <div class="nav-container">
-            <a href="{{ url_for('pages.index') }}" class="header__logo">
-                <svg xmlns="http://www.w3.org/2000/svg" class="logo__icon" fill="none" viewBox="0 0 24 24"
-                     stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                          d="M7 4v16M17 4v16M3 8h4m10 0h4M3 12h18M3 16h4m10 0h4M4 20h16a1 1 0 001-1V5a1 1 0 00-1-1H4a1 1 0 00-1 1v14a1 1 0 001 1z"/>
+            <a href="" class="header__logo">
+
+                <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" class="logo__icon"><title/>
+                    <g data-name="1" id="_1">
+                        <path d="M160.91,411.51a15,15,0,0,1-15-15v-295A53.56,53.56,0,0,1,199.41,48H423.5a15,15,0,0,1,15,15V358a15,15,0,0,1-30,0V78H199.41a23.52,23.52,0,0,0-23.5,23.49v295A15,15,0,0,1,160.91,411.51Z"/>
+                        <path d="M423.5,450H199.41a53.5,53.5,0,1,1,0-107H423.5a15,15,0,0,1,0,30H199.41a23.5,23.5,0,1,0,0,47H423.5a15,15,0,0,1,0,30Z"/>
+                        <path d="M406.14,447.58a15,15,0,0,1-15-15V358a15,15,0,0,1,30,0v74.57A15,15,0,0,1,406.14,447.58Z"/>
+                        <path d="M334.2,298.26a15,15,0,0,1-14.41-10.88l-27.58-96.53-27.59,96.53a15,15,0,1,1-28.84-8.24l42-147a15,15,0,0,1,28.85,0l42,147a15,15,0,0,1-10.3,18.54A14.71,14.71,0,0,1,334.2,298.26Z"/>
+                        <path d="M323.57,258.24H261.64a15,15,0,0,1,0-30h61.93a15,15,0,0,1,0,30Z"/>
+                    </g>
                 </svg>
-                <span class="logo__name">Watchlist</span>
+                <span class="logo__name">History of Poland</span>
             </a>
             <nav class="nav">
                 {% if not email %}
                     <a
                             href="{{ url_for('pages.login') }}"
-                            class="nav__link {{ 'nav__link--active' if request.path == url_for('pages.login') }}"
+                            class="nav__link"
                     >
                         <span class="nav__item">Log in</span>
                     </a>
                     <a
                             href="{{ url_for('pages.register') }}"
-                            class="nav__link {{ 'nav__link--active' if request.path == url_for('pages.register') }}"
+                            class="nav__link"
                     >
                         <span class="nav__item">Register</span>
                     </a>
                 {% else %}
                     <a
-                            href="{{ url_for('pages.index') }}"
-                            class="nav__link {{ 'nav__link--active' if request.path == url_for('pages.index') }}"
+                            href="#"
+                            class="nav__link"
                     >
                         <span class="nav__item">Movies</span>
                     </a>
                     <a
-                            href="{{ url_for('pages.logout') }}"
+                            href="#"
                             class="nav__link"
                     >
                         <span class="nav__item">Log out</span>
                     </a>
                 {% endif %}
-                <a href="{{ url_for('pages.toggle_theme', current_page=request.path) }}"
+                <a href=""
                    class="nav__link">
                     <span class="nav__item">
                         {% if theme == "dark" %}
