--- a/timeline_app/templates/macros/nav.html
+++ b/timeline_app/templates/macros/nav.html
@@ -16,7 +16,7 @@
                         <path d="M323.57,258.24H261.64a15,15,0,0,1,0-30h61.93a15,15,0,0,1,0,30Z"/>
                     </g>
                 </svg>
-                <span class="logo__name">History of Poland</span>
+                <span class="logo__name">History of Company X</span>
             </a>
             <nav class="nav">
                 {% if not email %}
