--- a/timeline_app/static/css/forms.css
+++ b/timeline_app/static/css/forms.css
@@ -42,7 +42,7 @@
     font-size: inherit;
     font-family: inherit;
     padding: 0.75rem 0.5rem;
-    background:  var(--background-color);
+    background: var(--background-color);
 }
 
 .form__field:focus {
@@ -54,4 +54,41 @@
     padding: 0.75rem 3rem;
     border: none;
     background: var(--background-color);
+}
+
+.button--form:hover {
+    background: var(--background-color-hover);
+}
+
+.form__link {
+    text-decoration: none;
+    color: var(--accent-colour);
+}
+
+.form__link:hover {
+    color: #d05656;
+}
+
+.form__error {
+    margin-top: 0.5rem;
+}
+
+.form__error,
+.form__flash {
+    display: block;
+    padding: 0.5rem;
+    color: var(--text);
+}
+
+.form__error,
+.form__flash--danger {
+    background: var(--accent-colour);
+}
+
+.form__flash {
+    margin: 0.5rem;
+}
+
+.form__flash--success {
+    background: var(--accent-colour-2);
 }
