--- a/timeline_app/templates/register.html
+++ b/timeline_app/templates/register.html
@@ -1,2 +1,29 @@
 {% extends 'layout.html' %}
 
+{% from "macros/fields.html" import render_text_field %}
+
+{% block head_content %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/forms.css') }}"/>
+{% endblock %}
+
+{% block main_content %}
+    <form name="login" method="post" novalidate class="form">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {%- for category, message in messages %}
+                <span class="form__flash form__flash--{{ category }}"> {{ message }}</span>
+            {% endfor %}
+        {% endwith %}
+
+        <div class="form__container">
+                {{ form.hidden_tag() }}
+
+                {{ render_text_field(form.nick) }}
+                {{ render_text_field(form.email) }}
+                {{ render_text_field(form.password) }}
+                {{ render_text_field(form.confirm_password) }}
+            <div>
+                {{ form.submit(class_="button button--form") }}
+            </div>
+        </div>
+    </form>
+{% endblock %}
