--- a/timeline_app/templates/login.html
+++ b/timeline_app/templates/login.html
@@ -17,7 +17,7 @@
         <div class="form__container">
                 {{ form.hidden_tag() }}
 
-                {{ render_text_field(form.nick) }}
+                {{ render_text_field(form.email) }}
                 {{ render_text_field(form.password) }}
             <span class="form__small">
                 Don't have an account? <a href="#" class="form__link">Register here</a>.
