logging and registration

--- a/timeline_app/templates/login.html
+++ b/timeline_app/templates/login.html
@@ -15,12 +15,12 @@
         {% endwith %}
 
         <div class="form__container">
-                {{ form.hidden_tag() }}
+            {{ form.hidden_tag() }}
 
-                {{ render_text_field(form.email) }}
-                {{ render_text_field(form.password) }}
+            {{ render_text_field(form.email) }}
+            {{ render_text_field(form.password) }}
             <span class="form__small">
-                Don't have an account? <a href="#" class="form__link">Register here</a>.
+                Don't have an account? <a href="{{ url_for('pages.register') }}" class="form__link">Register here</a>.
             </span>
             <div>
                 {{ form.submit(class_="button button--form") }}
