--- a/timeline_app/templates/index.html
+++ b/timeline_app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% from 'macros/svgs.html' import economical %}
+{% from 'macros/svgs.html' import economical, economical2 %}
 
 {% block head_content %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/timeline.css') }}"/>
@@ -11,44 +11,13 @@
         <div class="category-container">
             <div class="category">
                 <a href="#" class="category__link">
+                    <span class="category__item">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="category__icon" fill="none" stroke="currentColor">
+                            {{ economical2() }}
+                        </svg>
+                    </span>
                     <span class="category__item category__name">Economical</span>
-                    <span class="category__item">{{ economical('category__icon') }}</span>
-                </a>
-            </div>
-            <div class="category">
-                <a href="#" class="category__link">
-                    <span class="category__name">Political</span>
-                    <span>{{ economical('category__icon') }}</span>
-                </a>
-            </div>
-                        <div class="category">
-                <a href="#" class="category__link">
-                    <span class="category__name">Political</span>
-                    <span>{{ economical('category__icon') }}</span>
-                </a>
-            </div>
-                        <div class="category">
-                <a href="#" class="category__link">
-                    <span class="category__name">Political</span>
-                    <span>{{ economical('category__icon') }}</span>
-                </a>
-            </div>
-                        <div class="category">
-                <a href="#" class="category__link">
-                    <span class="category__name">Political</span>
-                    <span>{{ economical('category__icon') }}</span>
-                </a>
-            </div>
-                        <div class="category">
-                <a href="#" class="category__link">
-                    <span class="category__name">Political</span>
-                    <span>{{ economical('category__icon') }}</span>
-                </a>
-            </div>
-                        <div class="category">
-                <a href="#" class="category__link">
-                    <span class="category__name">Political</span>
-                    <span>{{ economical('category__icon') }}</span>
+                    <span class="category__item category__color"></span>
                 </a>
             </div>
         </div>
