--- a/timeline_app/static/css/timeline.css
+++ b/timeline_app/static/css/timeline.css
@@ -1,65 +1,74 @@
-.timeline-container {
-    display: flex;
-    flex-direction: column;
+.timeline {
+    margin: 2em auto;
+    max-width: 34.15em;
 }
 
-.category-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
-    justify-content: center;
+.event {
+    max-width: 34em;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    position: relative;
 }
 
-.category {
-    display: flex;
-    flex-direction: row;
-    margin: 0.25rem 1rem;
-    padding: 1rem 1rem;
+.event__body {
     border: var(--border);
-    background: var(--background-color);
-    color: var(--text);
-    justify-content: center;
-    min-width: 14rem;
+    border-radius: 1em;
+    padding: 1.5em;
 }
 
-
-
-.category__link {
-    display: flex;
-    flex-direction: row;
-    color: inherit;
-    text-decoration: none;
-    align-items: center;
-    justify-content: space-between;
-
-    /*justify-content: center;*/
-    /*margin: auto 0;*/
-
+.event__description {
+    margin-top: 1em;
 }
 
-.category__name {
-    margin-right: 1rem;
-    font-weight: bold;
-    font-size: 1.5em;
+.event:nth-child(odd) {
+    border-left: var(--border);
+    padding-left: 3em;
+    transform: translateX(16.95em);
 }
 
-.category__icon {
-    width: 4em;
-    height: 4em;
-    margin-right: 1rem;
+.event:nth-child(even) {
+    border-right: var(--border);
+    padding-right: 3em;
+    transform: translateX(-16.95em);
 }
 
-.category__color {
-    height: 2rem;
-    width: 2rem;
+.event:nth-child(odd):before,
+.event:nth-child(even):before {
+    content: "";
+    background: var(--text);
+    width: 3em;
+    height: 3px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.event:nth-child(odd):before {
+    left: 0;
+}
+
+.event:nth-child(even):before {
+    right: 0;
+}
+
+.event:nth-child(odd):after,
+.event:nth-child(even):after {
+    content: '';
+    /*background: var(--text);*/
+    box-shadow: 0 0 0.5em var(--text);
+    border: var(--border);
+    width: 0.8em;
+    height: 0.8em;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
     border-radius: 50%;
-    display: inline-block;
-    background: #3bb54a;
-    border: var(--border);
 }
 
-.category:hover {
-    background: var(--accent-colour);
+.event:nth-child(odd):after {
+    left: -0.5em;
 }
 
+.event:nth-child(even):after {
+    right: -0.5em;
+}
