--- a/timeline_app/static/css/timeline.css
+++ b/timeline_app/static/css/timeline.css
@@ -16,6 +16,24 @@
     padding: 1.5em;
 }
 
+.event__category {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.dot {
+    content: '';
+    border: var(--text);
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    background: green;
+    display: inline-block;
+    margin-left: 1rem;
+    border: var(--border);
+}
+
 .event__description {
     margin-top: 1em;
 }
@@ -49,26 +67,4 @@
 
 .event:nth-child(even):before {
     right: 0;
-}
-
-.event:nth-child(odd):after,
-.event:nth-child(even):after {
-    content: '';
-    /*background: var(--text);*/
-    box-shadow: 0 0 0.5em var(--text);
-    border: var(--border);
-    width: 0.8em;
-    height: 0.8em;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    border-radius: 50%;
-}
-
-.event:nth-child(odd):after {
-    left: -0.5em;
-}
-
-.event:nth-child(even):after {
-    right: -0.5em;
 }
