--- a/timeline_app/templates/index.html
+++ b/timeline_app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block head_content %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/category.css') }}"/>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/timeline.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/event.css') }}"/>
 {% endblock %}
 
 {% block main_content %}
