--- a/timeline_app/templates/index.html
+++ b/timeline_app/templates/index.html
@@ -12,10 +12,11 @@
                 <div class="category {{ 'category__item--active' if category.id in session.get('active_categories') else '' }}">
                     <a href="{{ url_for('pages.category', _id=category.id) }}" class="category__link">
                         <span class="category__item">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="category__icon" fill="none"
-                                 stroke="currentColor">
-                                {{ category.icon_svg | safe }}
-                            </svg>
+
+                            <img class="category__icon"
+                                 src="{{ url_for('static', filename='img/category/'~category.icon_svg ) }}"
+                                 alt="category.icon_svg"
+                            />
                         </span>
                         <span class="category__item category__name">{{ category.name }}</span>
                         <span class="category__item category__color" style="background: {{ category.color }}"></span>
