--- a/timeline_app/static/css/event.css
+++ b/timeline_app/static/css/event.css
@@ -84,3 +84,23 @@
 .event:nth-child(even):before {
     right: 0;
 }
+
+@media screen and (max-width: 1150px) {
+    .timeline {
+        width: 80vw;
+    }
+    .timeline .event {
+        width: 100%;
+        transform: none;
+        padding-left: 0;
+        padding-right: 0;
+        border: none;
+    }
+    .timeline .event::before {
+        width: 3px;
+        height: 4em;
+        top: -2em;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
