--- a/timeline_app/templates/macros/fields.html
+++ b/timeline_app/templates/macros/fields.html
@@ -8,3 +8,25 @@
         {% endfor %}
     </div>
 {% endmacro %}
+
+{%  macro render_color_field(field) %}
+    <div class="form__group">
+        {{ field.label(class_="form__label") }}
+        {{ field(class_="form__color-field") }}
+
+        {%- for error in field.errors  %}
+            <span class="form__error">{{ error }}</span>
+        {% endfor %}
+    </div>
+{% endmacro %}
+
+{%  macro render_file_field(field) %}
+    <div class="form__group">
+        {{ field.label(class="form__label") }}
+        {{ field(class="form__file-field", enctype="multipart/form-data") }}
+
+        {%- for error in field.errors  %}
+            <span class="form__error">{{ error }}</span>
+        {% endfor %}
+    </div>
+{% endmacro %}
