--- a/timeline_app/templates/macros/nav.html
+++ b/timeline_app/templates/macros/nav.html
@@ -34,6 +34,13 @@
                     </a>
                 {% else %}
                     <a
+                            href="{{ url_for('pages.edit_categories') }}"
+                            class="nav__link {{ 'nav__link--active' if request.path == url_for('pages.edit_categories') }}"
+                    >
+                        <span class="nav__item">Edit Category</span>
+                    </a>
+
+                    <a
                             href="{{ url_for('pages.index') }}"
                             class="nav__link {{ 'nav__link--active' if request.path == url_for('pages.index') }}"
                     >
