--- a/timeline_app/static/css/event.css
+++ b/timeline_app/static/css/event.css
@@ -104,3 +104,26 @@
         transform: translateX(-50%);
     }
 }
+
+.event__actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    border: var(--border);
+    border-radius: 1em;
+
+}
+
+.event__edit, .event__delete {
+    width: 100%;
+    border-radius: 1em;
+    text-align: center;
+}
+
+.event__edit:hover {
+    background: #3bb54a;
+}
+
+.event__delete:hover {
+    background: #d05656;
+}
