add edit events

--- a/timeline_app/templates/index.html
+++ b/timeline_app/templates/index.html
@@ -69,7 +69,7 @@
                                     Delete
 
                                 </a>
-                                <a href="#" class="event__edit event__link">
+                                <a href="{{ url_for('pages.edit_event', _id=event.id) }}" class="event__edit event__link">
                                     Edit
                                 </a>
                             </div>
