--- a/timeline_app/templates/macros/footer.html
+++ b/timeline_app/templates/macros/footer.html
@@ -1,5 +1,5 @@
 {% macro footer() %}
 <footer class="footer">
-    <small>Copyrighting &copy;2022. Movies Watchlist. All right reserved.</small>
+    <small>Copyrighting &copy;2022. Timeline by Szymon Kwiecinski. All right reserved.</small>
 </footer>
 {% endmacro %}
