--- a/timeline_app/templates/layout.html
+++ b/timeline_app/templates/layout.html
@@ -9,8 +9,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>History of Company X</title>
     <link href="https://fonts.googleapis.com/css?family=Public+Sans:400,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}"/>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"/>
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}" media="all" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" media="all" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/print.css') }}" media="print" />
 
 
     {% block head_content %} {% endblock %}
