--- a/timeline_app/templates/edit_category.html
+++ b/timeline_app/templates/edit_category.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% from "macros/fields.html" import render_text_field, render_color_field, render_file_field %}
 {% block head_content %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/forms.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/forms.css') }}" media="all" />
 
 {% endblock %}
 
