--- a/timeline_app/templates/register.html
+++ b/timeline_app/templates/register.html
@@ -3,7 +3,7 @@
 {% from "macros/fields.html" import render_text_field %}
 
 {% block head_content %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/forms.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/forms.css') }}" media="all" />
 {% endblock %}
 
 {% block main_content %}
